Bevel creates corrupt meshes in some cases #47257

Closed
opened 2016-01-27 22:49:12 +01:00 by Alexey · 13 comments

System Information
Operating system and graphics card

Blender Version
Broken: (All)
Worked: (None)

Short description of error
I don't know how to activate this bug again, and upload file. Only in this combination we have this bug.
test.blend
open, go to rendered shading mode.
Now we will have crash(blender close).
If we have no crash - try to change normai lnfluence, color influence, switch on and off, repeat it very fast - and we will have crash.
One else file with repeate this combination(for more chance to crush)
test.blend1

**System Information** Operating system and graphics card **Blender Version** Broken: (All) Worked: (None) **Short description of error** I don't know how to activate this bug again, and upload file. Only in this combination we have this bug. [test.blend](https://archive.blender.org/developer/F277547/test.blend) open, go to rendered shading mode. Now we will have crash(blender close). If we have no crash - try to change normai lnfluence, color influence, switch on and off, repeat it very fast - and we will have crash. One else file with repeate this combination(for more chance to crush) [test.blend1](https://archive.blender.org/developer/F277548/test.blend1)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

P.S. sometimes i was go to sculpt mode, switch on Dyntopo, draw anything - and crash(without go to rendered shading mode). But i was repeat it two times only, and can not repeat it again.

P.S. sometimes i was go to sculpt mode, switch on Dyntopo, draw anything - and crash(without go to rendered shading mode). But i was repeat it two times only, and can not repeat it again.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The mesh is corrupt, but we can't fix the bug based on a corrupt blend file alone.

To fix this we need the steps to follow to create the corrupt file.

The mesh is corrupt, but we can't fix the bug based on a corrupt blend file alone. To fix this we need the steps to follow to create the corrupt file.
Campbell Barton changed title from Unknown crash to Corrupt mesh crashes Blender 2016-01-28 07:47:45 +01:00
Author

In #47257#355179, @ideasman42 wrote:
The mesh is corrupt, but we can't fix the bug based on a corrupt blend file alone.

To fix this we need the steps to follow to create the corrupt file.

Create this combination with any method. Look closely in this construction, and normal direction too.
Add bevel modifier, add material with bump map(type of texture - is not important).]
bevel_crash.blend

> In #47257#355179, @ideasman42 wrote: > The mesh is corrupt, but we can't fix the bug based on a corrupt blend file alone. > > To fix this we need the steps to follow to create the corrupt file. Create this combination with any method. Look closely in this construction, and normal direction too. Add bevel modifier, add material with bump map(type of texture - is not important).] [bevel_crash.blend](https://archive.blender.org/developer/F277910/bevel_crash.blend)

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey
Howard Trickey was assigned by Sergey Sharybin 2016-02-02 10:45:39 +01:00

The file seems to have a proper mesh, however enabling bevel modifier asserts at bmesh_bevel.c:3631.

@howardt, is it something you can have a look into? :)

The file seems to have a proper mesh, however enabling bevel modifier asserts at `bmesh_bevel.c:3631`. @howardt, is it something you can have a look into? :)
Member

Looking. Somehow the bevel has created a face with a duplicate vert and a duplicate edge.

Looking. Somehow the bevel has created a face with a duplicate vert and a duplicate edge.
Member

Just updating this, now that I've investigated it some.
This turns out to expose a bug in the way I've implemented bevel:
in some places, it assumes that the faces around a vertex involved in a bevel all have consistent normal directions; this can't always be true. This shows up when reconstructing the faces that touch such vertices; and also in the calculation of the new bevel polygons.
Fixing this will take some thought and touches a number of places.
It is good that this report made me aware of these deficiencies -- thanks for the report.

Just updating this, now that I've investigated it some. This turns out to expose a bug in the way I've implemented bevel: in some places, it assumes that the faces around a vertex involved in a bevel all have consistent normal directions; this can't always be true. This shows up when reconstructing the faces that touch such vertices; and also in the calculation of the new bevel polygons. Fixing this will take some thought and touches a number of places. It is good that this report made me aware of these deficiencies -- thanks for the report.
Campbell Barton changed title from Corrupt mesh crashes Blender to Bevel creates corrupt meshes in some cases 2016-05-04 17:08:58 +02:00
Member

I have a fix for this completed but it creates a number of diffs in the regression test that I need to check out. Hopefully can close this out next week.

I have a fix for this completed but it creates a number of diffs in the regression test that I need to check out. Hopefully can close this out next week.

This issue was referenced by 7928030eff

This issue was referenced by 7928030eff0749fec6f5eaed80d943bebb10d143
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47257
No description provided.